# gnu_linux

./: README
01_TerminalProject/: Makefile  Show.c
02_Multifile/: Makefile  prog.c
03_Text/: randomizer.sh
04_Debugging/: Makefile  range  range.c  script_1.gdb  script_2.gdb  standart_1  standart_2  usage.c  usage.h
05_Regexps/: Makefile  esub.c
06_Tracing/: Makefile  move.c  protect.c  test.sh
07_Environmental/: Makefile.am  configure.ac  rhasher.c  test.sh
08_I18n/: configure.ac
08_I18n/po/: ru.po
08_I18n/src/: Makefile.am  game.c
09_PatchDiff/: Makefile  maze  maze_orig.c  v_0_1.patch  v_0_2.patch  v_0_3.patch
10_LibTesting/: Makefile.am  configure.ac
10_LibTesting/src/: Makefile.am  buf.h
10_LibTesting/tests/: Makefile.am  dummy.ts  upstream.ts
11_Documenting/: Doxyfile.in  Makefile.am  configure.ac
11_Documenting/po/: ru.po
11_Documenting/src/: game.c
12_InstallPackaging/: Makefile.am  configure.ac
12_InstallPackaging/lib/: Makefile.am  libgame.c  libgame.h
12_InstallPackaging/po/: POTFILES.in
12_InstallPackaging/src/: Makefile.am  game.c
12_InstallPackaging/tests/: Makefile.am  dummy.ts
